--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drop-down-menu-full",
   "version": "1.0.0",
-  "description": "",
+  "description": "In this project I will try to clone sony website's drop down menu. The goal of this project is to practice making smooth and user friendly drop down menus with the use of transitions and animations.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "epress": "^0.0.1-security",
     "eslint": "^8.23.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -27,10 +28,18 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.3",
-    "webpack-dev-server": "^4.11.0"
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "circular-dependency-plugin": "^5.2.2",
     "material-icons": "^1.11.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/luizerkp/drop-down-menu.git"
+  },
+  "bugs": {
+    "url": "https://github.com/luizerkp/drop-down-menu/issues"
+  },
+  "homepage": "https://github.com/luizerkp/drop-down-menu#readme"
 }
