Remove file-loader npm package

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack"
   },
   "keywords": [],
-  "author": "",
+  "author": "Luis Tamarez",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.1",
@@ -24,7 +24,6 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.1",
-    "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
